--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build and Test a Python File
+name: Test
 
 on: [push]
 
@@ -25,6 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+  test:
+    runs-on: ubuntu-latest
+    steps:      
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
